Fixed issue with dashboard jumping on slower machines

--- a/learnscripture/static/css/learnscripture.less
+++ b/learnscripture/static/css/learnscripture.less
@@ -1068,6 +1068,8 @@ ul.grouplist {
     float: right;
     background-color: white;
     padding: 1px;
+    // Set to the eventual height we need, to stop controls jumping around:
+    height: 109px;
 }
 
 #id-heatmap-section {
